# discovered-weekly

./: discovered_weekly.py  pyproject.toml  sample.env
.github/workflows/: run.yml
