[tool.poetry]
name = "discovered-weekly"
version = "0.1.0"
description = ""
authors = ["Ethan Rosenthal <ethan@ethanrosenthal.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.10"
spotipy = "2.23.0"
python-dotenv = "1.0.0"

[tool.poetry.dev-dependencies]
black = "23.3.0"
ipython = "8.13.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
